tested error calculation

--- a/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
+++ b/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
@@ -17,7 +17,7 @@
     "import json\n",
     "\n",
     "sys.path.insert(0, '../../operational_scripts')\n",
-    "from New_DRRP_Functions import dark_subtract, find_pixels, extract_intensities, q_ultimate_polarimetry, I_ultimate_polarimetry\n",
+    "from New_DRRP_Functions import dark_subtract, find_pixels, extract_intensities, q_ultimate_polarimetry, I_ultimate_polarimetry, decompose_retarder\n",
     "# from New_DRRP_Functions import *"
    ]
   },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,6 +279,7 @@
     "\n",
     "    x = np.trace(M_R)\n",
     "    inner = 4*x - x**2\n",
+    "    print(x, inner)\n",
     "    inner = np.clip(inner, 0, None) # Clamp inner to be non-negative (avoid sqrt of negative numbers).\n",
     "    \n",
     "    if inner == 0:\n",
@@ -292,7 +293,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.         -0.         -0.         -0.        ]\n",
+      " [ 0.00149678  0.97986183 -0.19616838 -0.00958264]\n",
+      " [ 0.00115056 -0.19633003 -0.98391401 -0.08562799]\n",
+      " [ 0.00010397  0.00695964  0.08485329 -0.99627053]]\n",
+      "[[ 1.          0.         -0.          0.        ]\n",
+      " [ 0.00149678  0.97986183 -0.19616838 -0.00958264]\n",
+      " [ 0.00115056 -0.19633003 -0.98391401 -0.08562799]\n",
+      " [ 0.00010397  0.00695964  0.08485329 -0.99627053]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Mr = decompose_retarder(matrix1300)\n",
+    "print(matrix1300)\n",
+    "print(Mr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.48625028314621777"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.arccos(-0.99627053)/(2*np.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.0003227117341938479 -0.001290951079638778\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "inf"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "propagated_error(matrix1300, RMS1300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,30 +715,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.          0.0006929  -0.00030505 -0.00039326]\n",
-      " [ 0.00266313  0.99543702  0.08501755  0.00206427]\n",
-      " [ 0.00153077  0.08542417 -0.99870099 -0.08610659]\n",
-      " [ 0.00010636 -0.0050707   0.08489771 -0.99524231]]\n",
-      "[[ 0.99639534  0.00158635  0.0016503   0.00000847]\n",
-      " [-0.00155403  1.          0.00272633  0.0013445 ]\n",
-      " [-0.00139902  0.00242582  0.9988919  -0.00058041]\n",
-      " [ 0.0000668  -0.00047296  0.00065279  0.9969852 ]]\n",
-      "0.0017507001572879613\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\EPL User\\Documents\\GitHub\\wcmelby-HWP_Characterizations\\SuperK_Select_Data\\JHK_Plate\\../../operational_scripts\\New_DRRP_Functions.py:438: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  return 2*RMS/np.sqrt(4*x-x**2) # Value in radians\n"
+      "[[ 1.          0.00069109 -0.00030915 -0.00039326]\n",
+      " [ 0.00267214  0.99637733  0.07319037  0.00155379]\n",
+      " [ 0.00151496  0.07359699 -0.9996413  -0.08611732]\n",
+      " [ 0.00010636 -0.00456733  0.08492627 -0.99524231]]\n",
+      "[[ 1.          0.00160189  0.0016468   0.0000085 ]\n",
+      " [-0.00156795  1.00364833  0.00272943  0.00134589]\n",
+      " [-0.00139481  0.00242782  1.002475   -0.0005905 ]\n",
+      " [ 0.00006704 -0.00047078  0.00065796  1.00059199]]\n",
+      "0.0016887805681018201\n"
      ]
     }
    ],
@@ -681,22 +747,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.         -0.         -0.          0.        ]\n",
+      "[[ 1.         -0.         -0.         -0.        ]\n",
       " [ 0.00149678  0.97986183 -0.19616838 -0.00958264]\n",
       " [ 0.00115056 -0.19633003 -0.98391401 -0.08562799]\n",
       " [ 0.00010397  0.00695964  0.08485329 -0.99627053]]\n",
-      "[[ 0.99937049 -0.         -0.          0.        ]\n",
-      " [ 0.00000454  1.          0.000632    0.00124062]\n",
-      " [-0.00116561  0.00216019  0.99983406 -0.00076553]\n",
-      " [ 0.00006623 -0.00037348  0.00071416  0.99862232]]\n",
-      "0.0008487276011290883\n"
+      "[[ 1.         -0.         -0.         -0.        ]\n",
+      " [ 0.00000454  1.00062991  0.00063239  0.0012414 ]\n",
+      " [-0.00116635  0.00216155  1.00046386 -0.00076601]\n",
+      " [ 0.00006627 -0.00037372  0.00071461  0.99925136]]\n",
+      "0.0008057448680990616\n",
+      "retardance error:  nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\admin1\\OneDrive\\Documents\\GitHub\\wcmelby-HWP_Characterizations\\SuperK_Select_Data\\JHK_Plate\\../../operational_scripts\\New_DRRP_Functions.py:398: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  return 2*RMS/np.sqrt(4*x-x**2) # Value in radians\n"
      ]
     }
    ],
@@ -708,7 +783,8 @@
     "RMS1300 = results[1300][3]\n",
     "print(matrix1300)\n",
     "print(calmatrix1300)\n",
-    "print(RMS1300)"
+    "print(RMS1300)\n",
+    "print(\"retardance error: \", results[1300][4])"
    ]
   },
   {
