saved updates from laptop

--- a/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
+++ b/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Willi\\anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import numpy as np\n",
@@ -17,7 +26,7 @@
     "import json\n",
     "\n",
     "sys.path.insert(0, '../../operational_scripts')\n",
-    "from New_DRRP_Functions import dark_subtract, find_pixels, extract_intensities, q_ultimate_polarimetry, I_ultimate_polarimetry, decompose_retarder\n",
+    "from New_DRRP_Functions import dark_subtract, extract_intensities, q_ultimate_polarimetry, I_ultimate_polarimetry, decompose_retarder\n",
     "# from New_DRRP_Functions import *"
    ]
   },
@@ -1492,7 +1501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
