--- a/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
+++ b/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
@@ -879,14 +879,14 @@
     "plt.gca().invert_yaxis()\n",
     "\n",
     "plt.title(\"JHK HWP, 1300 nm, Middle Position\", fontsize=14, pad=20)\n",
-    "# plt.savefig('JHK_Matrix_1300nm.png', format='png')\n",
+    "# plt.savefig('./Figures/JHK_Matrix_1300nm.png', format='png')\n",
     "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
     "plt.gca().invert_yaxis()\n",
     "\n",
     "plt.title(f\"Calibration Matrix, 1300 nm, RMS={RMS1300}\", fontsize=14, pad=20)\n",
-    "# plt.savefig('Calibration_Matrix_1300nm.png', format='png')\n",
+    "# plt.savefig('./Figures/Calibration_Matrix_1300nm.png', format='png')\n",
     "\n",
     "plt.show()"
    ]
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1149,13 +1149,13 @@
     "plt.ylim([0.4, 0.55])\n",
     "plt.title('JHK Waveplate Retardance, Middle Position', fontweight='bold', fontsize=16)\n",
     "plt.legend()\n",
-    "# plt.savefig('JHK_Retardance_I.png', format='png')\n",
+    "# plt.savefig('./Figues/JHK_Retardance_I.png', format='png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
     "plt.ylim([0.4, 0.55])\n",
     "plt.title('JHK Waveplate Retardance, x_5 y_5 Positon Positon', fontweight='bold', fontsize=16)\n",
     "plt.legend()\n",
-    "# plt.savefig('JHK_Retardance_I.png', format='png')\n",
+    "# plt.savefig('./Figures/JHK_Retardance_I.png', format='png')\n",
     "plt.show()"
    ]
   },
