removed some testing lines

--- a/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
+++ b/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import numpy as np\n",
-    "# import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "from astropy.io import fits\n",
     "import os\n",
-    "# import glob\n",
     "from scipy.optimize import curve_fit\n",
     "import json\n",
     "import matplotlib.ticker as ticker\n",
@@ -103,6 +101,16 @@
    "metadata": {},
    "source": [
     "# Testing data with many wavelengths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of wavelengths to process\n",
+    "wavelengths = [1100, 1200, 1300, 1400, 1500, 1600, 1750, 1850, 1950]"
    ]
   },
   {
@@ -291,136 +299,6 @@
     "    # print(x)\n",
     "    # print(4*x-x**2)\n",
     "    # return 2*RMS/np.sqrt(4*x-x**2) # Value in radians"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sigma_z:  0.006973749404120544\n",
-      "[[ 1.         -0.         -0.         -0.        ]\n",
-      " [ 0.00141796  0.75328381 -0.6529978  -0.04493424]\n",
-      " [-0.00047461 -0.65426412 -0.74693869 -0.126041  ]\n",
-      " [ 0.00038921  0.04846192  0.1239388  -0.99119526]] sample matrix\n",
-      "rms error:  0.0033976581385555616\n",
-      "standard retardance:  0.48039806057167556\n",
-      "arccos retardance:    0.47886449219587257\n",
-      "z:  -0.9911952551637963\n",
-      "retardance error in waves:         0.004401689732083955\n",
-      "arccos retardance error in waves:  0.008382453584702906\n"
-     ]
-    }
-   ],
-   "source": [
-    "# example usage\n",
-    "wavelength = 1200\n",
-    "results = multi_analysis([wavelength], cal_results, sample_results, 'q')\n",
-    "matrix = results[wavelength][0]\n",
-    "calmatrix = results[wavelength][2]\n",
-    "sigmaz = 1-np.abs(calmatrix[3, 3])\n",
-    "print(\"sigma_z: \", sigmaz)\n",
-    "Mr = decompose_retarder(matrix)\n",
-    "Mr_normalized = Mr/np.max(np.abs(Mr))\n",
-    "rms = results[wavelength][3]\n",
-    "print(matrix, \"sample matrix\")\n",
-    "print(\"rms error: \", rms)\n",
-    "print(\"standard retardance: \", results[wavelength][1])\n",
-    "z = Mr_normalized[3, 3]\n",
-    "print(\"arccos retardance:   \", np.arccos(Mr_normalized[3, 3])\n",
-    "print(\"z: \", z)\n",
-    "print(\"retardance error in waves:        \", results[wavelength][4]\n",
-    "print(\"arccos retardance error in waves: \", np.sqrt((-1/np.sqrt(1-z**2))**2 * sigmaz**2)\n",
-    "# print(matrix - Mr) # they are basically the same at all wavelengths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sigma_z:  -0.0007367693595026203\n",
-      "[[ 1.         -0.         -0.          0.        ]\n",
-      " [ 0.0013439   0.00623829 -1.0032892  -0.01310029]\n",
-      " [ 0.00102348 -1.00305003 -0.00597032 -0.01339468]\n",
-      " [ 0.00017262  0.01221012  0.01309546 -1.00275134]] sample matrix\n",
-      "rms error:  0.001011688890529457\n",
-      "standard retardance:  0.5\n",
-      "arccos retardance:    0.49478835369717206\n",
-      "z:  -0.9994639061793598\n",
-      "retardance error in waves:         nan\n",
-      "manual retardance error in waves:  0.022503722887233818\n"
-     ]
-    }
-   ],
-   "source": [
-    "# example usage\n",
-    "wavelength = 1750\n",
-    "results = multi_analysis([wavelength], cal_results, sample_results, 'q')\n",
-    "matrix = results[wavelength][0]\n",
-    "calmatrix = results[wavelength][2]\n",
-    "sigmaz = 1-np.abs(calmatrix[3, 3])\n",
-    "print(\"sigma_z: \", sigmaz)\n",
-    "Mr = decompose_retarder(matrix)\n",
-    "Mr_normalized = Mr/np.max(np.abs(Mr))\n",
-    "rms = results[wavelength][3]\n",
-    "print(matrix, \"sample matrix\")\n",
-    "print(\"rms error: \", rms)\n",
-    "print(\"standard retardance: \", results[wavelength][1])\n",
-    "z = Mr_normalized[3, 3]\n",
-    "print(\"arccos retardance:   \", np.arccos(Mr_normalized[3, 3])/(2*np.pi))\n",
-    "print(\"z: \", z)\n",
-    "print(\"retardance error in waves:        \", results[wavelength][4]/(2*np.pi))\n",
-    "print(\"manual retardance error in waves: \", np.sqrt((-1/np.sqrt(1-z**2))**2 * sigmaz**2))\n",
-    "# print(matrix - Mr) # they are basically the same at all wavelengths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.99729496 -0.          0.         -0.        ]\n",
-      " [-0.00125777  0.9974615  -0.02772715 -0.0016624 ]\n",
-      " [ 0.00173901 -0.02892193 -1.         -0.01671923]\n",
-      " [-0.00031349 -0.00039052  0.01528766 -0.99798719]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(matrix/np.max(np.abs(matrix)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.48990027862011476"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.arccos(-0.99798719)/(2*np.pi)"
    ]
   },
   {
@@ -1404,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1296,6 @@
    ],
    "source": [
     "opt_params, cov_matrix = curve_fit(fit_function, wavelengths, corrected_Q_retardances, p0=[1226, 1554], sigma=Q_retardance_errors)\n",
-    "# opt_params, cov_matrix = curve_fit(fit_function, wavelengths, corrected_Q_retardances, p0=[1226, 1554])\n",
     "print(opt_params, \"These are the best fit parameters\")\n",
     "opt_param_errors = list(np.sqrt(np.diagonal(cov_matrix)))\n",
     "print(opt_param_errors, \"This is the error in the best fit parameters\")\n",
