--- a/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
+++ b/SuperK_Select_Data/JHK_Plate/JHK_SuperK_Analysis.ipynb
@@ -2,23 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Willi\\anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from astropy.io import fits\n",
-    "import os\n",
     "from scipy.optimize import curve_fit\n",
     "import json\n",
     "import matplotlib.ticker as ticker\n",
     "from IPython.display import display, Math\n",
     "\n",
     "sys.path.insert(0, '../../operational_scripts')\n",
-    "from New_DRRP_Functions import dark_subtract, extract_intensities, q_ultimate_polarimetry, I_ultimate_polarimetry, decompose_retarder\n",
-    "# from New_DRRP_Functions import *"
+    "from New_DRRP_Functions import dark_subtract, extract_intensities, q_ultimate_polarimetry, I_ultimate_polarimetry, decompose_retarder"
    ]
   },
   {
@@ -264,41 +270,6 @@
    "metadata": {},
    "source": [
     "**Still need to figure out the right error propagation**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def propagated_error(M_R, RMS):\n",
-    "    \"\"\"Propagates error in the Mueller matrix to error in the retardance. \n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    M_R : 4x4 array for the Mueller matrix of a retarder\n",
-    "    RMS : float. Root-mean-square error of the calibration matrix\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    float\n",
-    "        RMS error in the retardance value. \n",
-    "    \"\"\"\n",
-    "    # return RMS/np.sqrt(1-(np.trace(M_R)/2-1)**2) # These two equations are equivalent\n",
-    "\n",
-    "    x = np.trace(M_R)\n",
-    "    inner = 4*x - x**2\n",
-    "    print(x, inner)\n",
-    "    inner = np.clip(inner, 0, None) # Clamp inner to be non-negative (avoid sqrt of negative numbers).\n",
-    "    \n",
-    "    if inner == 0:\n",
-    "        return np.inf\n",
-    "    \n",
-    "    return 2 * RMS / np.sqrt(inner)\n",
-    "    # print(x)\n",
-    "    # print(4*x-x**2)\n",
-    "    # return 2*RMS/np.sqrt(4*x-x**2) # Value in radians"
    ]
   },
   {
@@ -1636,7 +1607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
